--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -119,6 +119,20 @@
         app:backgroundTint="@android:color/white"
         app:srcCompat="@drawable/ic_google" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/register_page"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="64dp"
+        android:layout_marginLeft="@dimen/fab_margin"
+        android:elevation="8dp"
+        app:backgroundTint="@android:color/white"
+        app:srcCompat="@drawable/ic_bosm"
+        android:scaleType="fitCenter"/>
+
 
     <RelativeLayout
         android:layout_width="match_parent"
