--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,10 +33,24 @@
         android:id="@+id/iv_bosm_image"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="24dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:padding="50dp"
         android:src="@drawable/ic_bosm" />
+
+   <android.support.design.widget.FloatingActionButton
+       android:id="@+id/button_info"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_alignParentTop="true"
+       android:layout_alignParentRight="true"
+       android:layout_marginTop="24dp"
+       android:layout_marginRight="@dimen/fab_margin"
+       android:elevation="8dp"
+       app:backgroundTint="@android:color/black"
+       app:srcCompat="@drawable/icon_info"
+       android:scaleType="fitCenter"
+        />
 
     <RelativeLayout
         android:id="@+id/rl_1"
