--- a/app/src/main/res/layout/content_registration.xml
+++ b/app/src/main/res/layout/content_registration.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="bitspilani.bosm.RegistrationActivity"
+    tools:context="bitspilani.bosm.RegistrationOld"
     tools:showIn="@layout/app_bar_registration">
 
 
