--- a/app/src/main/res/layout/welcome_login_slide3.xml
+++ b/app/src/main/res/layout/welcome_login_slide3.xml
@@ -19,7 +19,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="INSTRUCTIONS"
+            android:text="DEMO"
             android:textColor="@android:color/white"
             android:textSize="50dp"
             android:textStyle="bold" />
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:padding="15dp"
-            android:text="These are the instructions"
+            android:text="These are the demo slides"
             android:textAlignment="center"
             android:textColor="@android:color/white"
             android:textSize="20dp" />
