--- a/app/src/main/res/layout/layout_food_row.xml
+++ b/app/src/main/res/layout/layout_food_row.xml
@@ -30,6 +30,7 @@
             <TextView
                 android:id="@+id/tv_food_name"
                 style="@style/TextAppearance.AppCompat.Title.Inverse"
+                android:textColor="#ffffff"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="36dp"
@@ -53,6 +54,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_food_name"
+
+                android:textColor="#ffffff"
                 android:layout_marginLeft="36dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="5dp"
