--- a/app/src/main/res/layout/activity_current_sport.xml
+++ b/app/src/main/res/layout/activity_current_sport.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".CurrentSportActivity">
+    tools:context=".fragments.CurrentSportFragment">
 
     <ImageView
         android:layout_width="match_parent"
@@ -15,29 +15,7 @@
 
 
     <android.support.v7.widget.CardView
-        android:visibility="gone"
-        android:id="@+id/rl_stall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="12dp"
-        android:alpha=".95"
-        app:cardElevation="6dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="24dp"
-        app:cardBackgroundColor="@color/back_shade4"
-        app:cardCornerRadius="20dp">
-
-        <ImageView
-            android:id="@+id/icon_stall"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            android:padding="10dp"
-            android:src="@drawable/icon_stall"
-            android:tint="#ffffff" />
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-
+        android:id="@+id/card_events"
         android:layout_marginTop="40dp"
         android:layout_marginBottom="24dp"
         android:layout_width="match_parent"
@@ -49,20 +27,31 @@
         app:cardElevation="6dp"
         android:layout_marginRight="64dp"
         android:layout_toRightOf="@+id/rl_stall"
-        app:cardBackgroundColor="@color/back_shade4"
-        app:cardCornerRadius="20dp">
+        app:cardBackgroundColor="@color/background2"
+        app:cardCornerRadius="20.5dp">
 
-        <TextView
-            android:id="@+id/tv_header"
+        <android.support.v7.widget.CardView
+            android:layout_margin="1dp"
+            app:cardCornerRadius="20dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:gravity="center"
-            android:paddingBottom="4dp"
-            android:paddingTop="4dp"
-            android:text="Football"
-            android:textColor="@color/background2"
-            android:textSize="30sp" />
+            app:cardElevation="0dp"
+            app:cardBackgroundColor="@color/back_shade4"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/tv_header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:gravity="center"
+                android:paddingBottom="4dp"
+                android:paddingTop="4dp"
+                android:text="Football"
+                android:textColor="@color/background2"
+                android:textSize="30sp" />
+
+        </android.support.v7.widget.CardView>
+
+
 
 
     </android.support.v7.widget.CardView>
@@ -72,8 +61,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
-        android:paddingTop="80dp"
-        android:paddingBottom="125dp"
+        android:paddingTop="104dp"
+        android:paddingBottom="140dp"
         android:divider="@android:color/transparent"
         android:overScrollMode="never"
         />
