--- a/app/src/main/res/layout/fragment_food_items.xml
+++ b/app/src/main/res/layout/fragment_food_items.xml
@@ -62,6 +62,23 @@
 
     </android.support.v7.widget.CardView>
 
+    <ImageButton
+        android:layout_alignParentEnd="true"
+        android:id="@+id/ib_cart"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_gravity="end"
+        android:layout_marginBottom="@dimen/fab_margin"
+        android:layout_marginLeft="@dimen/fab_margin"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:layout_marginTop="48dp"
+        android:background="@drawable/circular_imageview3"
+        android:elevation="8dp"
+        android:padding="10dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/icon_cart"
+        android:tint="@color/back_shade6" />
+
 
     <ListView
         android:clipToPadding="false"
@@ -75,12 +92,27 @@
         android:divider="@android:color/transparent">
     </ListView>
 
+
+
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_centerInParent="true"
         android:visibility="gone" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="64dp"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:background="#78bf33"
+        app:backgroundTint="#78bf33"
+        app:srcCompat="@drawable/icon_wallet" />
+
 
     <View
         android:layout_width="match_parent"
