--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,18 +17,21 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_horizontal_ntb"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:overScrollMode="never"/>
 
 
     <android.support.v7.widget.CardView
         app:cardElevation="6dp"
-        app:cardCornerRadius="25dp"
+        app:cardCornerRadius="25.5dp"
+        app:cardBackgroundColor="@color/background2"
         android:layout_marginBottom="64dp"
         android:layout_gravity="bottom|center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
     <devlight.io.library.ntb.NavigationTabBar
+        android:layout_margin="1dp"
         android:id="@+id/ntb_sample_5"
         android:layout_width="200dp"
         android:layout_height="50dp"
