--- a/app/src/main/res/layout/layout_drawer_menu.xml
+++ b/app/src/main/res/layout/layout_drawer_menu.xml
@@ -1,82 +1,204 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@drawable/menu_gradient"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/iv_bosm"
-        android:layout_marginTop="56dp"
-        android:layout_centerHorizontal="true"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:src="@drawable/ic_bosm"/>
-
-    <TextView
-        android:id="@+id/tv_bosm"
-        android:layout_marginTop="12dp"
-        android:textSize="27sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#ffffff"
-        android:layout_centerHorizontal="true"
-        android:text="BOSM 2K18"
-        android:layout_below="@+id/iv_bosm"
-        />
-
-
-    <TextView
-        android:background="@drawable/border_shadow_menu"
-        android:layout_marginRight="24dp"
-        android:id="@+id/tv_home"
-        android:text="Home"
-        android:layout_marginTop="24dp"
-        android:padding="12dp"
-        android:layout_below="@+id/tv_bosm"
-        android:textColor="#ffffff"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_marginLeft="24dp"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:background="@drawable/menu_gradient">
 
-    <ImageView
-        android:tint="#ffffff"
-        android:layout_alignParentRight="true"
-        android:src="@drawable/icon_roight_arrow"
-        android:layout_alignTop="@+id/tv_home"
-        android:layout_width="wrap_content"
-        android:padding="12dp"
-        android:layout_alignBottom="@+id/tv_home"
-        android:layout_height="wrap_content" />
+        <ImageView
+            android:id="@+id/iv_bosm"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="56dp"
+            android:src="@drawable/ic_bosm" />
 
-    <TextView
-        android:background="@drawable/border_shadow_menu"
-        android:layout_marginRight="24dp"
-        android:id="@+id/tv_order_food"
-        android:text="Order Food"
-        android:layout_marginTop="12dp"
-        android:padding="12dp"
-        android:layout_below="@+id/tv_home"
-        android:textColor="#ffffff"
-        android:layout_width="match_parent"
-        android:layout_marginLeft="24dp"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/tv_bosm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/iv_bosm"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="12dp"
+            android:text="BOSM 2K18"
+            android:textColor="#ffffff"
+            android:textSize="27sp" />
 
-    <ImageView
-        android:tint="#ffffff"
-        android:layout_alignParentRight="true"
-        android:src="@drawable/icon_roight_arrow"
-        android:layout_alignTop="@+id/tv_order_food"
-        android:layout_width="wrap_content"
-        android:padding="12dp"
-        android:layout_alignBottom="@+id/tv_order_food"
-        android:layout_height="wrap_content" />
 
-    <ImageView
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="56dp"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:src="@drawable/baxter"/>
+        <TextView
+            android:id="@+id/tv_home"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_bosm"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginTop="24dp"
+            android:background="@drawable/border_shadow_menu"
+            android:padding="12dp"
+            android:text="Home"
+            android:textColor="#ffffff" />
 
-</RelativeLayout>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/tv_home"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@+id/tv_home"
+            android:padding="12dp"
+            android:src="@drawable/icon_roight_arrow"
+            android:tint="#ffffff" />
+
+        <TextView
+            android:id="@+id/tv_order_food"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_home"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/border_shadow_menu"
+            android:padding="12dp"
+            android:text="Order Food"
+            android:textColor="#ffffff" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/tv_order_food"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@+id/tv_order_food"
+            android:padding="12dp"
+            android:src="@drawable/icon_roight_arrow"
+            android:tint="#ffffff" />
+
+        <TextView
+            android:id="@+id/tv_developers"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_order_food"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/border_shadow_menu"
+            android:padding="12dp"
+            android:text="Developers"
+            android:textColor="#ffffff" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/tv_developers"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@+id/tv_developers"
+            android:padding="12dp"
+            android:src="@drawable/icon_roight_arrow"
+            android:tint="#ffffff" />
+
+            <TextView
+            android:id="@+id/tv_sponsors"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_developers"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/border_shadow_menu"
+            android:padding="12dp"
+            android:text="Sponsors"
+            android:textColor="#ffffff" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/tv_sponsors"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@+id/tv_sponsors"
+            android:padding="12dp"
+            android:src="@drawable/icon_roight_arrow"
+            android:tint="#ffffff" />
+
+        <TextView
+            android:id="@+id/tv_epc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_sponsors"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/border_shadow_menu"
+            android:padding="12dp"
+            android:text="EPC blog"
+            android:textColor="#ffffff" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/tv_epc"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@+id/tv_epc"
+            android:padding="12dp"
+            android:src="@drawable/icon_roight_arrow"
+            android:tint="#ffffff" />
+
+        <TextView
+            android:id="@+id/tv_hpc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_epc"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/border_shadow_menu"
+            android:padding="12dp"
+            android:text="HPC blog"
+            android:textColor="#ffffff" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/tv_hpc"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@+id/tv_hpc"
+            android:padding="12dp"
+            android:src="@drawable/icon_roight_arrow"
+            android:tint="#ffffff" />
+
+        <TextView
+            android:id="@+id/tv_contactus"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_hpc"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/border_shadow_menu"
+            android:padding="12dp"
+            android:text="Contact us"
+            android:textColor="#ffffff" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/tv_contactus"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@+id/tv_contactus"
+            android:padding="12dp"
+            android:src="@drawable/icon_roight_arrow"
+            android:tint="#ffffff" />
+
+
+        <ImageView
+            android:id="@+id/iv_baxter"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_below="@id/tv_contactus"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="56dp"
+            android:layout_marginBottom="56dp"
+            android:src="@drawable/baxter" />
+
+    </RelativeLayout>
+</ScrollView>
