--- a/app/src/main/res/layout/layout_row_sport.xml
+++ b/app/src/main/res/layout/layout_row_sport.xml
@@ -27,7 +27,7 @@
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
-
+        android:id="@+id/card_name"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:layout_width="match_parent"
@@ -39,8 +39,9 @@
         app:cardElevation="6dp"
         android:layout_marginRight="32dp"
         android:layout_toRightOf="@+id/rl_stall"
-        app:cardBackgroundColor="@color/back_shade4"
-        app:cardCornerRadius="20dp">
+        app:cardBackgroundColor="@android:color/transparent"
+        app:cardCornerRadius="3dp"
+        android:transitionName="@string/simple_fragment_transition">
 
         <TextView
             android:id="@+id/tv_name"
@@ -48,9 +49,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:gravity="center"
-            android:paddingBottom="8dp"
-            android:paddingTop="8dp"
+            android:paddingBottom="12dp"
+            android:paddingTop="12dp"
             android:text="Football"
+            android:background="@drawable/bg_gradient2"
             android:textColor="@color/background2"
             android:textSize="22sp" />
 
