--- a/app/src/main/res/layout/row_live.xml
+++ b/app/src/main/res/layout/row_live.xml
@@ -1,49 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <android.support.v7.widget.CardView
+        android:layout_marginBottom="6dp"
+        android:layout_marginEnd="24dp"
+        app:cardBackgroundColor="@android:color/transparent"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="6dp"
+        app:cardCornerRadius="4dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
+        android:padding="4dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="6dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="6dp">
+        android:background="@drawable/bg_gradient2"
+       >
 
         <RelativeLayout
             android:id="@+id/tv_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/back_shade4"
             android:paddingVertical="4dp">
+
 
             <TextView
                 android:id="@+id/tv_sport"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@color/back_shade4"
-                android:drawableLeft="@drawable/icon_sportreg_black"
+                android:layout_centerHorizontal="true"
                 android:drawablePadding="4dp"
                 android:drawableTint="@android:color/white"
                 android:paddingHorizontal="8dp"
                 android:paddingVertical="4dp"
                 android:text="FOOTBALL"
+                android:textSize="11sp"
                 android:textStyle="bold" />
 
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:visibility="gone"
+                android:id="@+id/shimmer_view_container"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:shimmer_auto_start="false"
+                android:layout_centerHorizontal="true"
+                >
+
+            </com.facebook.shimmer.ShimmerFrameLayout>
+
             <TextView
+                android:layout_below="@+id/tv_sport"
+                android:paddingHorizontal="8dp"
+                android:paddingVertical="0dp"
                 android:id="@+id/tv_round"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:background="@color/back_shade4"
-                android:drawableLeft="@drawable/bullet"
-                android:paddingHorizontal="8dp"
-                android:paddingVertical="4dp"
                 android:text="Round 1"
+                android:textSize="32dp"
                 android:textColor="#E64A19"
+                android:layout_centerHorizontal="true"
                 android:textStyle="bold" />
-
 
         </RelativeLayout>
 
@@ -51,154 +71,197 @@
             android:id="@+id/ll_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/tv_title"
-            android:background="#BDBDBD">
+            android:layout_below="@id/tv_title">
+
+            <LinearLayout
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tv_college_one"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:paddingHorizontal="36dp"
+                android:gravity="left"
+                android:drawableLeft="@drawable/bullet"
                 android:paddingVertical="8dp"
                 android:text="BITS"
-                android:textColor="#000000"
-                android:textSize="12sp"
-                android:textStyle="bold" />
+                android:textColor="#eeeeee"
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/tv_score_one"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.2"
                 android:gravity="center"
-                android:text="-"
-                android:textColor="#000000"
+                android:textSize="40sp"
+                android:text="2"
+                android:textColor="@color/silver"
                 android:textStyle="bold" />
 
+            </LinearLayout>
 
-            <TextView
-                android:id="@+id/tv_score_two"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.2"
-                android:gravity="center"
-                android:text="-"
-                android:textColor="#000000"
-                android:textStyle="bold" />
+            <android.support.v7.widget.CardView
+                app:cardCornerRadius="5dp"
+                android:layout_width="2dp"
+                app:cardElevation="0dp"
+                android:layout_marginTop="12dp"
+                app:cardBackgroundColor="@color/back_shade2"
+                android:layout_height="55dp"
+                />
 
-            <TextView
-                android:id="@+id/tv_college_two"
+            <LinearLayout
+                android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:padding="15dp"
-                android:paddingHorizontal="36dp"
-                android:paddingVertical="8dp"
-                android:text="TITS"
-                android:textColor="#000000"
-                android:textSize="12sp"
-                android:textStyle="bold" />
+                android:orientation="vertical">
+
+                <TextView
+                    android:drawableRight="@drawable/bullet"
+                    android:id="@+id/tv_college_two"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="right"
+                    android:paddingVertical="8dp"
+                    android:text="BITS"
+                    android:textColor="#eeeeee"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/tv_score_two"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="15"
+                    android:textSize="40sp"
+                    android:textColor="@color/silver"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/tv_venue"
+            android:layout_width="wrap_content"
+            android:gravity="end"
+            android:layout_height="wrap_content"
+            android:padding="6dp"
+            android:text="GYM G"
+            android:textColor="#66627f"
+            android:textSize="9sp" />
+        <TextView
+        android:id="@+id/tv_date_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="6dp"
+            android:layout_alignParentEnd="true"
+        android:text="DAY 2 : 19:00 hrs"
+        android:textColor="#66627f"
+        android:textSize="9sp" />
+
+
         <RelativeLayout
-            android:id="@+id/ll_time"
+            android:layout_marginTop="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/ll_content"
-            android:background="#BDBDBD">
-
-
-            <!--<View-->
-            <!--android:background="@color/back_shade2"-->
-            <!--android:layout_marginHorizontal="15dp"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="2dp"-->
-            <!--/>-->
-
-            <TextView
-                android:id="@+id/tv_date_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:paddingTop="4dp"
-                android:text="DAY 2 : 19:00 hrs"
-                android:textColor="#000000"
-                android:textSize="12sp" />
-
-            <TextView
-                android:id="@+id/tv_venue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv_date_time"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="12dp"
-                android:padding="4dp"
-                android:text="GYM G"
-                android:textColor="#000000"
-                android:textSize="9sp" />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:layout_below="@+id/ll_time"
-            android:background="#BDBDBD"
+            android:layout_below="@+id/ll_content"
             android:orientation="horizontal"
             android:visibility="visible">
 
-            <ImageView
+
+            <com.like.LikeButton
+                android:layout_margin="6dp"
                 android:id="@+id/iv_vote1"
+                app:icon_size="25dp"
                 android:layout_width="36dp"
                 android:layout_height="36dp"
                 android:layout_gravity="start"
-                android:src="@drawable/icon_sportreg_black"
-                android:tint="#000000" />
+                app:dots_secondary_color="@color/orange_shade"/>
 
             <LinearLayout
+                android:layout_centerVertical="true"
+                android:id="@+id/ll_vote"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_toLeftOf="@id/iv_vote2"
                 android:layout_toRightOf="@id/iv_vote1"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/tv_vote_one"
+                <RelativeLayout
+                    android:id="@+id/rl_vote_one"
                     android:layout_width="0dp"
-                    android:layout_height="24dp"
-                    android:layout_gravity="center_vertical"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@android:color/black"
-                    android:gravity="center"
-                    android:text="%"
-                    android:visibility="gone" />
+                    android:background="@drawable/live_rounded"
+                    android:backgroundTint="@color/back_shade2"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginEnd="8dp"
+                    android:visibility="invisible"
+
+                    >
+
+                    <TextView
+                        android:id="@+id/tv_vote_one"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:padding="4dp"
+                        android:text=""
+                        android:textColor="@android:color/white"
+                        android:visibility="invisible" />
+                </RelativeLayout>
 
                 <TextView
-                    android:id="@+id/tv_vote_two"
+                    android:layout_width="8dp"
+                    android:layout_height="wrap_content" />
+
+                <RelativeLayout
+                    android:id="@+id/rl_vote_two"
                     android:layout_width="0dp"
-                    android:layout_height="24dp"
-                    android:layout_gravity="center_vertical"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@color/back_shade4"
-                    android:gravity="center"
-                    android:text="%"
-                    android:visibility="gone" />
+                    android:background="@drawable/live_rounded"
+                    android:backgroundTint="@color/back_shade2"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="8dp"
+                    android:visibility="invisible">
+
+                    <TextView
+                        android:id="@+id/tv_vote_two"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:padding="4dp"
+                        android:text=""
+                        android:textColor="@android:color/white"
+                        android:visibility="invisible" />
+                </RelativeLayout>
             </LinearLayout>
 
-            <ImageView
+            <com.like.LikeButton
+                android:layout_margin="6dp"
                 android:id="@+id/iv_vote2"
+                app:icon_size="25dp"
+                android:scaleX="-1"
                 android:layout_width="36dp"
                 android:layout_height="36dp"
                 android:layout_alignParentRight="true"
-                android:layout_gravity="end"
-                android:src="@drawable/icon_sportreg_black" />
+                app:dots_secondary_color="@color/back_shade2"/>
+
+            <!--<ImageView-->
+                <!--android:id="@+id/iv_vote2"-->
+                <!--android:layout_width="36dp"-->
+                <!--android:layout_height="36dp"-->
+                <!--android:layout_alignParentRight="true"-->
+                <!--android:layout_gravity="end"-->
+                <!--android:padding="5dp"-->
+                <!--android:src="@drawable/icon_sportreg_black" />-->
         </RelativeLayout>
 
 
     </RelativeLayout>
+    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
