--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,45 +20,16 @@
     <color name="back_shade5">#a4a2b2</color>
     <color name="back_shade6">#bcbcc1</color>
 
+
+    <color name="gold">#D4AF37</color>
+    <color name="bronze">#A57164</color>
+    <color name="silver">#C0C0C0</color>
+
     <color name="background2">#f7ca42</color>
     <color name="shade3">#18ffff</color>
     <color name="shade4">#78bf33</color>
 
-<!-- WelcomeLogin Screen-->
-    <!-- Screens background color-->
-    <color name="bg_screen1">#f64c73</color>
-    <color name="bg_screen2">#20d2bb</color>
-    <color name="bg_screen3">#3395ff</color>
-    <color name="bg_screen4">#c873f4</color>
-
-    <!-- dots inactive colors -->
-    <color name="dot_dark_screen1">#d1395c</color>
-    <color name="dot_dark_screen2">#14a895</color>
-    <color name="dot_dark_screen3">#2278d4</color>
-    <color name="dot_dark_screen4">#a854d4</color>
-
-    <!-- dots active colors -->
-    <color name="dot_light_screen1">#f98da5</color>
-    <color name="dot_light_screen2">#8cf9eb</color>
-    <color name="dot_light_screen3">#93c6fd</color>
-    <color name="dot_light_screen4">#e4b5fc</color>
-
-    <array name="array_dot_active">
-        <item>@color/dot_light_screen1</item>
-        <item>@color/dot_light_screen2</item>
-        <item>@color/dot_light_screen3</item>
-        <item>@color/dot_light_screen4</item>
-    </array>
-
-    <array name="array_dot_inactive">
-        <item>@color/dot_dark_screen1</item>
-        <item>@color/dot_dark_screen2</item>
-        <item>@color/dot_dark_screen3</item>
-        <item>@color/dot_dark_screen4</item>
-    </array>
-
-
-
+    <color name="orange_shade">#E64A19</color>
 
         <color name="textColorPrimary">#FFFFFF</color>
         <color name="windowBackground">#FFFFFF</color>
