--- a/app/src/main/res/layout/row_wallet_history_header.xml
+++ b/app/src/main/res/layout/row_wallet_history_header.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#F7F7F7">
+    android:background="@drawable/border_shadow_menu">
     <View
         android:background="#A6A5A5"
         android:layout_width="match_parent"
@@ -16,8 +16,9 @@
         android:text="Header"
         android:padding="15dp"
         android:textSize="17sp"
-        android:textColor="#373535"
+        android:textColor="#ffffff"
         android:layout_marginLeft="15dp"
+        android:textStyle="bold"
         />
     <View
         android:background="@drawable/bottom_shadow"
