--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -1,115 +1,73 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="bitspilani.bosm.OrderDetailsActivity">
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_top"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:minHeight="?attr/actionBarSize"
-        app:theme="@style/AppTheme"></android.support.v7.widget.Toolbar>
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/background">
 
     <ImageView
-        android:id="@+id/iv_icon"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
-        android:src="@drawable/icon_tick" />
+        android:tint="#3f395e"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/bg1"/>
 
-    <TextView
-        android:id="@+id/tv_amount"
+
+
+    <android.support.v7.widget.CardView
+        android:layout_marginTop="40dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/iv_icon"
+        android:alpha=".95"
+        app:cardElevation="6dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="5dp"
-        android:text="Rs. 25"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="29sp"
-        android:textStyle="bold" />
-
-    <RelativeLayout
-        android:id="@+id/rl_1"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_below="@id/tv_amount">
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="7dp"
-            android:layout_toLeftOf="@+id/tv_or"
-            android:background="@color/colorAccent" />
-
-        <ImageView
-            android:id="@+id/tv_or"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="7dp"
-            android:layout_marginRight="20dp"
-            android:layout_toRightOf="@+id/tv_or"
-            android:background="@color/colorAccent" />
-
-
-    </RelativeLayout>
-
-    <LinearLayout
-        android:id="@+id/ll_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/rl_1"
-        android:layout_centerHorizontal="true">
+        app:cardBackgroundColor="@color/back_shade4"
+        app:cardCornerRadius="20dp">
 
         <TextView
+            android:layout_marginLeft="24dp"
+            android:id="@+id/tv_stall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Order Unique ID : "
-            android:textColor="@android:color/black"
-            android:textSize="27sp" />
+            android:layout_gravity="center_vertical"
+            android:paddingBottom="4dp"
+            android:layout_marginRight="24dp"
+            android:paddingTop="4dp"
+            android:text="Order Details"
+            android:textColor="@color/shade4"
+            android:textSize="30sp" />
 
-        <TextView
-            android:id="@+id/tv_order_unique_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="4359"
-            android:textColor="@android:color/black"
-            android:textSize="27sp" />
-    </LinearLayout>
 
-    <TextView
-        android:id="@+id/tv_timestamp"
+    </android.support.v7.widget.CardView>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:visibility="gone"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_centerInParent="true"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:clipToPadding="false"
+        android:paddingTop="105dp"
+        android:paddingBottom="90dp"
+        android:overScrollMode="never"
+        android:layout_marginTop="12dp"
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/ll_2"
-        android:layout_marginTop="25dp"
-        android:gravity="center_horizontal"
-        android:text="dateTime"
-        android:textSize="17sp" />
+        android:layout_height="match_parent"
+        android:divider="@android:color/transparent">
+    </android.support.v7.widget.RecyclerView>
 
     <View
-        android:background="@color/colorAccent"
         android:layout_width="match_parent"
-        android:layout_height="10dp"
-        android:layout_above="@+id/bottom" />
+        android:layout_height="72dp"
+        android:background="@drawable/top_gradient"/>
 
     <View
-        android:background="@color/colorPrimaryDark"
-        android:id="@+id/bottom"
+        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
-        android:layout_height="10dp"
-        android:layout_alignParentBottom="true" />
+        android:layout_height="72dp"
+        android:rotation="180"
+        android:background="@drawable/top_gradient"/>
 
 </RelativeLayout>
