--- a/app/src/main/res/layout/activity_wallet.xml
+++ b/app/src/main/res/layout/activity_wallet.xml
@@ -13,26 +13,6 @@
         android:src="@drawable/bg1"
         android:tint="#3f395e" />
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_top"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:minHeight="?attr/actionBarSize"
-        android:visibility="gone"
-        app:theme="@style/AppTheme">
-
-        <TextView
-            android:id="@+id/toolbar_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="WALLET"
-            android:textColor="@color/colorAccent"
-            android:textSize="21sp"
-            android:textStyle="bold" />
-    </android.support.v7.widget.Toolbar>
-
-
 
     <android.support.v7.widget.CardView
         android:id="@+id/rl_stall"
@@ -104,6 +84,7 @@
             android:id="@+id/progressBar"
             android:layout_width="35dp"
             android:layout_height="35dp"
+            android:visibility="gone"
             android:layout_below="@+id/tv_h1"
             android:layout_marginLeft="40dp"
             android:layout_marginTop="10dp" />
@@ -191,6 +172,7 @@
     </RelativeLayout>
 
     <ProgressBar
+        android:visibility="gone"
         android:id="@+id/progressBar2"
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -223,7 +205,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/rl_3"
-        android:layout_marginTop="5dp" />
+        android:layout_marginTop="5dp"
+        android:overScrollMode="never"/>
 
     <ImageView
         android:visibility="gone"
@@ -241,7 +224,7 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="20dp"
         android:layout_marginTop="30dp"
-        android:src="@drawable/icon_pay"
+        android:src="@drawable/icon_pay_order"
         android:visibility="gone" />
 
     <View
