--- a/app/src/main/res/layout/row_current_sport_athletic2.xml
+++ b/app/src/main/res/layout/row_current_sport_athletic2.xml
@@ -69,9 +69,13 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:maxLength="30"
                 android:id="@+id/tv_subtitle"
                 android:paddingTop="8dp"
-                android:layout_width="match_parent"
+                android:layout_centerHorizontal="true"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:textColor="#ffffff"
@@ -79,6 +83,7 @@
                 android:paddingBottom="4dp"
                 android:text="Running Event -100m"
                 android:textStyle="bold" />
+
 
         </RelativeLayout>
 
