--- a/app/src/main/res/layout/row_sport.xml
+++ b/app/src/main/res/layout/row_sport.xml
@@ -43,6 +43,7 @@
         app:cardCornerRadius="3dp"
         android:transitionName="@string/simple_fragment_transition">
         <RelativeLayout
+            android:id="@+id/rl"
             android:background="@drawable/bg_gradient2"
             android:layout_width="match_parent"
             android:layout_height="60dp">
@@ -69,6 +70,28 @@
             android:text="Football"
             android:textColor="@color/background2"
             android:textSize="22sp" />
+
+            <com.sackcentury.shinebuttonlib.ShineButton
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginRight="12dp"
+                android:layout_centerInParent="true"
+                android:src="@android:color/darker_gray"
+                android:id="@+id/notify"
+                app:btn_color="@color/back_shade2"
+                app:btn_fill_color="@color/background2"
+                app:allow_random_color="false"
+                app:enable_flashing="true"
+                app:big_shine_color="@color/orange_shade"
+                app:click_animation_duration="200"
+                app:shine_animation_duration="1500"
+                app:shine_turn_angle="10"
+                app:small_shine_offset_angle="20"
+                app:small_shine_color="#CC9999"
+                app:shine_count="8"/>
+
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
