--- a/app/src/main/res/layout/activity_add_money_b.xml
+++ b/app/src/main/res/layout/activity_add_money_b.xml
@@ -63,6 +63,22 @@
 
 
     </android.support.v7.widget.CardView>
+    <ImageButton
+        android:layout_alignParentEnd="true"
+        android:id="@+id/ib_cart"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_gravity="end"
+        android:layout_marginBottom="@dimen/fab_margin"
+        android:layout_marginLeft="@dimen/fab_margin"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:layout_marginTop="48dp"
+        android:background="@drawable/circular_imageview3"
+        android:elevation="8dp"
+        android:padding="10dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/icon_cart"
+        android:tint="@color/back_shade6" />
 
 
     <android.support.constraint.ConstraintLayout
