--- a/app/src/main/res/layout/row_event.xml
+++ b/app/src/main/res/layout/row_event.xml
@@ -96,38 +96,47 @@
                 android:lineSpacingExtra="2dp" />
 
 
-            <LinearLayout
-                android:layout_marginTop="4dp"
-                android:layout_below="@id/tv_info"
+            <RelativeLayout
+                android:paddingRight="12dp"
+                android:paddingLeft="12dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_alignParentBottom="true">
 
                 <TextView
                     android:id="@+id/tv_date2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:gravity="center"
-                    android:text="19th Sep" />
+                    android:text="19th Sep"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:maxLength="15"
+                    />
 
                 <TextView
                     android:id="@+id/tv_time2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:gravity="center"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:layout_centerHorizontal="true"
+                    android:maxLength="12"
                     android:text="19:00" />
 
                 <TextView
+                    android:layout_alignParentEnd="true"
                     android:id="@+id/tv_venue2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:gravity="center"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:maxLength="15"
                     android:text="Gym G" />
 
-            </LinearLayout>
+            </RelativeLayout>
 
         </RelativeLayout>
     </FrameLayout>
