--- a/app/src/main/res/layout/row_wallet_history.xml
+++ b/app/src/main/res/layout/row_wallet_history.xml
@@ -11,18 +11,6 @@
         android:layout_height="70dp"
         android:layout_margin="15dp"
         android:src="@drawable/icon_pay_order" />
-
-    <TextView
-        android:id="@+id/tv_header"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_toLeftOf="@+id/tv_amount"
-        android:layout_toRightOf="@+id/iv_icon"
-        android:paddingRight="10dp"
-        android:text="Cashback"
-        android:textColor="#ffffff" />
-
     <TextView
         android:id="@+id/tv_amount"
         android:layout_width="wrap_content"
@@ -33,7 +21,29 @@
         android:text="+ 5.00"
         android:textColor="#18FFFF"
         android:textSize="19sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_centerVertical="true"/>
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toLeftOf="@+id/tv_amount"
+        android:layout_toRightOf="@+id/iv_icon"
+        android:orientation="vertical"
+        android:gravity="center_vertical"
+        android:layout_alignTop="@id/iv_icon"
+        android:layout_alignBottom="@id/iv_icon">
+
+    <TextView
+        android:id="@+id/tv_header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingRight="10dp"
+        android:text="Cashback"
+        android:textColor="#ffffff"
+        android:layout_marginBottom="6dp"/>
+
 
     <TextView
         android:id="@+id/tv_comment"
@@ -43,17 +53,18 @@
         android:layout_toLeftOf="@+id/tv_amount"
         android:layout_toRightOf="@+id/iv_icon"
         android:paddingRight="10dp"
-        android:text="Order _ID #fdfsdfdsfsfsfs" />
+        android:text="Order _ID #fdfsdfdsfsfsfs"
+        android:layout_marginBottom="6dp"/>
 
     <TextView
         android:id="@+id/tv_time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="15dp"
         android:layout_toLeftOf="@+id/tv_amount"
         android:layout_toRightOf="@+id/iv_icon"
         android:paddingRight="10dp"
         android:text="11:51 PM" />
+    </LinearLayout>
 
 </RelativeLayout>
